modification de l'affichage de Math.round

--- a/index.html
+++ b/index.html
@@ -37,10 +37,10 @@
             <th width="200">Interprétation</th><th width="100">Femmes</th><th width="100">Hommes</th>
         </tr>
         <tr>
-            <td>Maigreur</td><td> < 19,1 </td><td> < 20,7 </td>
+            <td>Maigreur</td><td> 19,1 </td><td> 20,7 </td>
         </tr>
         <tr>
-            <td>Normal</td><td> 19,1 - 25,8 </td><td> 20,7 - 26,4 </td>
+            <td>Normal</td><td> 19,2 - 25,8 </td><td> 20,8 - 26,4 </td>
         </tr>
         <tr>
             <td>Surpoids</td><td> 25,9 - 27,3 </td><td> 26,5 - 27,8 </td>
@@ -49,10 +49,10 @@
             <td>Obésité modéré</td><td> 27,4 - 32,3 </td><td> 27,9 - 31,1 </td>
         </tr>
         <tr>
-            <td>Obésité sévère</td><td> > 32,3 - 40 </td><td> > 31,1 - 41,2 </td>
+            <td>Obésité sévère</td><td> 32,4 - 40 </td><td> 31,2 - 41,2 </td>
         </tr>
         <tr>
-            <td>Obésité morbide</td><td> > 32,4 </td><td> > 41,3 </td>
+            <td>Obésité morbide</td><td> 40.1 </td><td> 41,3 </td>
         </tr>
     </table>
 
